# flyer

./: CMakeLists.txt  LICENSE  README.md  format_repository.sh
.github/workflows/: clang-format-check.yml  run_unit_tests.yml
motor/src/: controller.cpp
simulations/: CMakeLists.txt  README.md  clock.cpp  config.yaml  physics.cpp  simulation.cpp  simulation.h  simulator_bin.cpp  tests.cpp
simulations/src/: clock.h  simulation.cpp
telemetry/: CMakeLists.txt  README.md  telem.cpp  telem.h  tests.cpp
telemetry/src/: telem.cpp  telem.h  tests.cpp
